@@ -617,6 +617,7 @@ adipisicing elit
  \\
 \hline
 
+\label{nested-table}
 \noindent\makebox[\linewidth][r]{%
 \setlength{\DUtablewidth}{\dimexpr\linewidth-3\arrayrulewidth\relax}%
 \begin{tabular}{|p{\DUcolumnwidth{0.150}}|p{\DUcolumnwidth{0.150}}|}
@@ -869,13 +870,13 @@ and bar characters (< | >) except for typewriter font \DUroletitlereference{cmtt
 
 In LaTeX, we must set an explicit anchor (\texttt{\textbackslash{}phantomsection}) for a
 %
-\phantomsection\label{hypertarget-in-plain-text}hypertarget in plain text or in a figure but not in a longtable or
-caption:
+\phantomsection\label{hypertarget-in-plain-text}hypertarget in plain text or in a figure but not in a table title
+or figure caption:
 
 \setlength{\DUtablewidth}{\dimexpr\linewidth-4\arrayrulewidth\relax}%
 \begin{longtable}{|p{\DUcolumnwidth{0.150}}|p{\DUcolumnwidth{0.150}}|p{\DUcolumnwidth{0.150}}|}
 \caption{Table with %
-\label{hypertarget-in-table-title}hypertarget in table title.}\\
+\label{hypertarget-in-table-title}hypertarget in table title.\label{table-label}}\\
 \hline
 
 False
@@ -886,7 +887,6 @@ None
  \\
 \hline
 \end{longtable}
-\label{table-label}
 
 \begin{figure}
 \phantomsection\label{figure-label}
@@ -904,6 +904,7 @@ Legend with %
 
 See \hyperref[hypertarget-in-plain-text]{hypertarget in plain text},
 \hyperref[table-label]{table label}, \hyperref[hypertarget-in-table-title]{hypertarget in table title},
+\hyperref[nested-table]{nested table},
 \hyperref[figure-label]{figure label}, \hyperref[hypertarget-in-figure-caption]{hypertarget in figure caption},
 \hyperref[hypertarget-in-figure-legend]{hypertarget in figure legend}, and
 \hyperref[image-label]{image label}.
