@@ -1081,6 +1081,7 @@ With the \textquotedbl{}widths\textquotedbl{} argument \textquotedbl{}auto\textq
 column widths are determined by the backend (if supported by the
 writer/backend).
 
+\phantomsection\label{target2}\label{target1}
 \begin{longtable*}{|l|l|l|}
 \hline
 \textbf{A} & \textbf{B} & \textbf{A or B} \\
@@ -1101,7 +1102,6 @@ False & True & True \\
 True & True & True \\
 \hline
 \end{longtable*}
-\label{target2}\label{target1}
 
 
 \subsection{2.14.4   Admonitions%
