@@ -1117,6 +1117,7 @@ With the “widths” argument “auto” (or “class” value “colwidths-aut
 column widths are determined by the backend (if supported by the
 writer/backend).
 
+\phantomsection\label{target2}\label{target1}
 \begin{longtable*}{|l|l|l|}
 \hline
 \textbf{A} & \textbf{B} & \textbf{A or B} \\
@@ -1137,7 +1138,6 @@ False & True & True \\
 True & True & True \\
 \hline
 \end{longtable*}
-\label{target2}\label{target1}
 
 
 \subsubsection{2.14.4   Admonitions%
