@@ -2,8 +2,8 @@ Hyperlinks and -targets
 =======================
 
 In LaTeX, we must set an explicit anchor (``\phantomsection``) for a
-_`hypertarget in plain text` or in a figure but not in a longtable or
-caption:
+_`hypertarget in plain text` or in a figure but not in a table title
+or figure caption:
 
 .. _`table label`:
 
@@ -27,6 +27,7 @@ caption:
 
 See `hypertarget in plain text`_,
 `table label`_, `hypertarget in table title`_,
+`nested table`_,
 `figure label`_, `hypertarget in figure caption`_,
 `hypertarget in figure legend`_, and
 `image label`_.
