@@ -114,6 +114,7 @@ Nested tables
 +-----------------------------------------+-----------------+
 | .. table::                              | cell 1, 2       |
 |     :align: right                       |                 |
+|     :name: nested table                 |                 |
 |                                         |                 |
 |     +-----+-----+                       |                 |
 |     |  1  |  2  |                       |                 |
