@@ -22,6 +22,10 @@ Changes since 0.20.1
   Update to version `1.4 <https://pypi.org/project/roman/4.1/>`__.
   Fixes feature-requests:#95 (license is now ZPL 2.1).
 
+* docutils/writers/latex2e/__init__.py
+
+  - Fix placement of hyperlink target (label) for tables (bug #440).
+
 
 Release 0.20.1 (2023-05-17)
 ===========================
